[gd_scene load_steps=4 format=2]

[ext_resource path="res://engine/gui/MainMenuScene.gd" type="Script" id=1]
[ext_resource path="res://engine/gui/PlayerData.gd" type="Script" id=2]
[ext_resource path="res://engine/gui/DevButtons.gd" type="Script" id=3]

[node name="MainMenuScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.0
margin_top = -46.0
margin_right = 81.0
margin_bottom = 22.0
__meta__ = {
"_edit_group_": true
}

[node name="NewGame" type="Button" parent="Buttons"]
margin_right = 190.0
margin_bottom = 20.0
text = "New Game"

[node name="LoadGame" type="Button" parent="Buttons"]
margin_top = 24.0
margin_right = 190.0
margin_bottom = 44.0
text = "Load Game"

[node name="QuitGame" type="Button" parent="Buttons"]
margin_top = 48.0
margin_right = 190.0
margin_bottom = 68.0
text = "Quit Game"

[node name="PlayerData" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -163.0
margin_right = 65.0
margin_bottom = -73.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Name" type="LineEdit" parent="PlayerData"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = -8.0
margin_right = 59.5
margin_bottom = 16.0

[node name="DevButtons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 91.0
margin_top = -45.0
margin_right = 238.0
margin_bottom = -5.0
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="NewAndCreate" type="Button" parent="DevButtons"]
margin_right = 147.0
margin_bottom = 20.0
text = "New And Create"

[connection signal="pressed" from="Buttons/NewGame" to="." method="newGame"]
[connection signal="pressed" from="Buttons/LoadGame" to="." method="loadGame"]
[connection signal="pressed" from="Buttons/QuitGame" to="." method="exitProgram"]
[connection signal="pressed" from="DevButtons/NewAndCreate" to="DevButtons" method="_on_NewCreateButton_pressed"]
